<resources>
    <string name="app_name">Komper</string>
    <string name="OAuthClientID">653133929096-87kcb1q6g608d049bkbifaqp4f6cb1h9.apps.googleusercontent.com"</string>
    <string name="WalMartAPIKey">sqcn99uq29ggbwj6n5ugbbrf</string>

    <!-- for creating grocery list -->
    <string name="label_create_grocery_list">Enter Grocery Item</string>
    <string name="label_item_name">Item Name: </string>
    <string name="label_brand_name">Brand Name: </string>
    <string name="label_Quantity">Quantity: </string>
    <string name="label_expiry_date">Expiry Date: </string>
    <string name="button_done">OK</string>
    <string name="hint_choose_date">Choose Date</string>

    <string name="createlist_button">Create Grocery List</string>
    <string name="view_button">View Grocery List</string>

    <string name="label_grocery_list">Enter Label</string>

    <string name="menu_add_new_grocery_list">Add New</string>

    <string name="label_grocerylist"> Grocery Lists </string>
    <string name="label_itemlist"> Items Lists </string>
    <string name="label_create_new_grocerylist"> Create New Grocery List</string>
    <string name="label_add_newitem">Enter Grocery Item</string>

    <string name="popup_edit">Edit</string>
    <string name="popup_delete">Delete</string>
    <string name="popup_search">Search In Store</string>


    <string name="item_name"><b><i>Item Name:</i></b> %s</string>
    <string name="brand_name"><i>Brand Name:</i> %s</string>
    <string name="expiry_date"><i>Expiry Date:</i> %s</string>
    <string name="quantity"><i>Quantity:</i> %s</string>
    <string name="price"><i>Price: $</i> %s</string>



    <string name="grocery_label"><i>Grocery List:</i> %s</string>
    <string name="date_created"><i>Created Date:</i> %s</string>
    <string name="total_price"><i>Total Price: $</i> %s</string>
    <string name="item_number"><i>Number Of Items:</i> %s</string>
    <string name="store_name"><i>Store Name:</i> %s</string>

    <string name="search_button">Search</string>
    <string name="view_result">View Result</string>
    <string name="checkout">Checkout</string>

    <string name="ok">OK</string>
    <string name="upload_receipt_prompt">Upload a receipt first.</string>

</resources>
