<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/gcl_label"
        android:text="@string/grocery_label"
        android:textSize="15dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/gcl_date"
        android:text="@string/date_created"
        android:textSize="15dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/gcl_price"
        android:text="@string/total_price"
        android:textSize="15dp"
        />
    <TextView
        android:id="@+id/gcl_totalnumberofItems"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_number"
        android:textSize="15dp"
        android:layout_marginBottom="5dp"
        />



</LinearLayout>