<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/cardview_list_checkout_itemlist"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="5dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:padding="5dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/checkout_item_name"
                android:text="@string/item_name"
                android:textSize="15dp"
                tools:layout_editor_absoluteY="10dp"
                tools:layout_editor_absoluteX="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/checkout_item_brand_name"
                android:text="@string/brand_name"
                android:textSize="15dp"
                tools:layout_editor_absoluteY="28dp"
                tools:layout_editor_absoluteX="16dp"
                app:layout_constraintTop_toBottomOf="@id/checkout_item_name"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/checkout_item_expiry_date"
                android:text="@string/expiry_date"
                android:textSize="15dp"
                tools:layout_editor_absoluteY="46dp"
                tools:layout_editor_absoluteX="16dp"
                app:layout_constraintTop_toBottomOf="@id/checkout_item_brand_name"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/checkout_item_quantity"
                android:text="@string/quantity"
                android:textSize="15dp"
                tools:layout_editor_absoluteY="64dp"
                tools:layout_editor_absoluteX="16dp"
                app:layout_constraintTop_toBottomOf="@id/checkout_item_expiry_date"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/checkout_item_price"
                android:text="@string/price"
                android:textSize="15dp"
                tools:layout_editor_absoluteY="82dp"
                tools:layout_editor_absoluteX="8dp"
                app:layout_constraintTop_toBottomOf="@id/checkout_item_quantity"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleX="1"
                android:scaleY="1"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:id="@+id/price_checkout_checkedout"/>

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>